kubernetes/utility/apps/observability/victoria-logs/app/http-route.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vmauth
  annotations:
    external-dns/unifi: "true"
spec:
  parentRefs:
    - name: envoy
      namespace: networking
      sectionName: https
  hostnames:
    - logs.techtales.io
  rules:
    - backendRefs:
        - name: vmauth
          port: 8427
